--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                         Xianliang Li
                                     </p>
                                     <p style="text-align: center; font-family: 'LXGW WenKai Mono TC', 'Lato', Verdana, Helvetica, sans-serif; font-size: 20px; margin-bottom: 20px;">
-                                        李贤亮
+                                        李賢亮
                                     </p>
                                     <p style="text-align: center; font-family: serif, 'Lato', Verdana, Helvetica, sans-serif; font-size: 18px; margin-bottom: 20px;">
                                         <a href="https://scholar.google.com/citations?user=vQKUgscAAAAJ&hl=en&oi=ao">Google Scholar</a> / 
