--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     <div class="content">
                         <h2>About</h2>
                         <p>
-                            I am currently a PhD student at <a href="https://www.ism.ac.jp/index_e.html">The Institute of Statistical Mathematics</a>, and <a href="https://www.soken.ac.jp/en/">The Graduate University for Advanced Studies, SOKENDAI</a>, supervised by <a href="https://hermite.jp/">Prof. Han Bao</a>, as well as a visiting student at <a href="https://www.westlake.edu.cn/">Westlake University</a>.
+                            I am currently a PhD student at <a href="https://www.ism.ac.jp/index_e.html">The Institute of Statistical Mathematics</a>, and <a href="https://www.soken.ac.jp/en/">The Graduate University for Advanced Studies, SOKENDAI</a>, supervised by <a href="https://hermite.jp/">Prof. Han Bao</a>, as well as a visiting student at <a href="https://en.westlake.edu.cn/">Westlake University</a>.
                         </p>    
                         <p>   
                             Previously, I received my M.Eng. in Computer Technology at <a href="http://english.siat.cas.cn/">Shenzhen Institutes of Advanced Technology</a> and <a href="https://english.ucas.ac.cn/">University of Chinese Academy of Sciences</a>, where I worked on the research topic of signal processing and localization under the supervision of <a href="https://scholar.google.com/citations?user=nLsqCz4AAAAJ&hl=en">Prof. Sheng Xu</a>. Before that, I received my B.Sc. in Physics at <a href="https://www.sysu.edu.cn/sysuen/">Sun Yat-sen University</a>.
@@ -206,7 +206,7 @@
                                         <tr>
                                             <td style="width: 100%; vertical-align: middle;">
                                                 <li>
-                                                <h3 class="paper-title">Systematical sensor path optimization solutions for AOA target localization accuracy improvement with theoretical analysis</h3>
+                                                <h3 class="paper-title">Systematical Sensor Path Optimization Solutions for AOA Target Localization Accuracy Improvement With Theoretical Analysis</h3>
                                                 <p>Sheng Xu, Bing Zhu, <b>Xianliang Li</b>, Xinyu Wu, Tiantian Xu<sup>&dagger;</sup></p>
                                                 <p><em>IEEE Transactions on Vehicular Technology</em>, 2025</p>
                                                 <p>[<a href="https://ieeexplore.ieee.org/abstract/document/10574382">IEEEXplore</a>]</p>
