--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                                                 <li>
                                                 <h3 class="paper-title">3D Source Tracking Using a Position-Unknown AOA Sensor with Measurement Drift and UAV Moving Direction Optimization</h3>
                                                 <p>Rongrong Xu, Sheng Xu<sup>&dagger;</sup>, Kaimin Cao<sup>&dagger;</sup>, <b>Xianliang Li</b>, Jialiang Wang, Wujing Cao</p>
-                                                <p><em>IEEE International Conference on Real-time Computing and Robotics (RCAR)</em>, 2025</p>
+                                                <p><em>IEEE International Conference on Real-time Computing and Robotics</em>, 2025</p>
                                                 <p>[<a href="https://ieeexplore.ieee.org/abstract/document/10670780">IEEEXplore</a>]</p>
                                                 </li>
                                             </td>
