--- a/index.html
+++ b/index.html
@@ -130,10 +130,10 @@
                     <div class="content">
                         <h2>About</h2>
                         <p>
-                            I am currently a PhD student at <a href="https://www.ism.ac.jp/index_e.html">The Institute of Statistical Mathematics</a>, and <a href="https://www.soken.ac.jp/en/">The Graduate University for Advanced Studies, SOKENDAI</a>, supervised by <a href="https://hermite.jp/">Prof. Han Bao</a>, as well as a visiting student at <a href="https://en.westlake.edu.cn/">Westlake University</a>.
+                            I am currently a PhD student at <a href="https://www.ism.ac.jp/index_e.html">The Institute of Statistical Mathematics</a>, and <a href="https://www.soken.ac.jp/en/">The Graduate University for Advanced Studies, SOKENDAI</a>, advised by <a href="https://hermite.jp/">Prof. Han Bao</a>, as well as a visiting student at <a href="https://en.westlake.edu.cn/">Westlake University</a>.
                         </p>    
                         <p>   
-                            Previously, I received my M.Eng. in Computer Technology at <a href="http://english.siat.cas.cn/">Shenzhen Institutes of Advanced Technology</a> and <a href="https://english.ucas.ac.cn/">University of Chinese Academy of Sciences</a>, where I worked on the research topic of signal processing and localization under the supervision of <a href="https://scholar.google.com/citations?user=nLsqCz4AAAAJ&hl=en">Prof. Sheng Xu</a>. Before that, I received my B.Sc. in Physics at <a href="https://www.sysu.edu.cn/sysuen/">Sun Yat-sen University</a>.
+                            Previously, I received my M.Eng. in Computer Technology at <a href="http://english.siat.cas.cn/">Shenzhen Institutes of Advanced Technology</a> and <a href="https://english.ucas.ac.cn/">University of Chinese Academy of Sciences</a>, where I worked on the research topic of signal processing and localization advised by <a href="https://scholar.google.com/citations?user=nLsqCz4AAAAJ&hl=en">Prof. Sheng Xu</a>. Before that, I received my B.Sc. in Physics at <a href="https://www.sysu.edu.cn/sysuen/">Sun Yat-sen University</a>.
                         </p>
                         <p>
                             Research interests: Deep Learning Theory, Optimizer.
@@ -236,31 +236,17 @@
                         </ul>
                     </div>
 
-                    <!-- <div class="content">
-                        <h2>Education</h2>
+                    <div class="content">
+                        <h2>Service</h2>
                         <ul>
-                            <li>
-                                <b>The Graduate University for Advanced Studies, SOKENDAI</b>
-                                <p>Ph.D. in Statistical Sciences</p>
-                                <p>2025/10 - Current</p>
-                            </li>
-                            <li>
-                                <b>University of Chinese Academy of Sciences</b>
-                                <p>M.Eng. in Computer Technology</p>
-                                <p>2022/09 - 2025/06</p>
-                            </li>
-                            <li>
-                                <b>Sun Yat-sen University</b>
-                                <p>B.S. in Physics</p>
-                                <p>2018/09 - 2022/06</p>
-                            </li>
+                            <li>Reviewer for ICLR 2026.</li>
                         </ul>
-                    </div> -->
+                    </div>
 
                     <!-- Footer -->
                     <div class="content">
                         <p style="text-align: right; font-size: x-small;">
-                            Website updated 2025/09/10.
+                            Website updated 2025/10/01.
                         </p>
                     </div>
                 </td>
