--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                                         The Graduate University for Advanced Studies, SOKENDAI
                                     </p>
                                     <p style="text-align: left; font-size: 16px;">
-                                        <b>Email</b>: yinleung.ley (at) gmail.com
+                                        <b>Email</b>: li.xianliang (at) ism.ac.jp
                                     </p>
                                 </td>
                                 <td style="padding:2%;width:40%;max-width:40%">
